添加了评论方法，把图片存储地址转移到七牛云上

--- a/source/_posts/原根.md
+++ b/source/_posts/原根.md
@@ -14,7 +14,7 @@ tags:
 
 [参考定理](https://zh.wikipedia.org/wiki/%E5%8E%9F%E6%A0%B9)
 
-<center>![](yuangen.png)</center>
+<center>{% qnimg 原根/yuangen.png %}</center>
 
 就是在值最小的时候满足欧拉定理的式子，同时还要和欧拉函数的值一样,才能称作式子中这两个互质的数，一个是模另一个原根。
 
@@ -24,5 +24,5 @@ tags:
 
 原根性质：
 
-<center>![](xinzhi.png)</center>
+<center>{% qnimg 原根/xinzhi.png %}</center>
 
