--- a/source/_posts/双射单射满射.md
+++ b/source/_posts/双射单射满射.md
@@ -17,5 +17,8 @@ tags:
 
 双射（也称一一对应或一一映射）：既是单射又是满射的函数。直观地说，一个双射函数形成一个对应，并且每一个输入值都有正好一个输出值以及每一个输出值都有正好一个输入值。 （每个定义域都有相应的值域与之对应--一对一）
 
-![](she.png)
+<!--more-->
+
+<center>{% qnimg 双射单射满射/she.png %}
+
 -------------[摘自维基百科](https://zh.wikipedia.org/wiki/%E5%8D%95%E5%B0%84%E3%80%81%E5%8F%8C%E5%B0%84%E4%B8%8E%E6%BB%A1%E5%B0%84)
