--- a/source/_posts/同余.md
+++ b/source/_posts/同余.md
@@ -28,7 +28,7 @@ m | (a-b): (a-b)是m的倍数
 
 ## 保持基本运算
 
-<center>![](gongshi.png)</center>
+<center>{% qnimg 同余/gongshi.png %}</center>
 
 ## 传递性
 
@@ -38,12 +38,12 @@ m | (a-b): (a-b)是m的倍数
 
 ## 放大缩小模数
    
-  <center>![](bigsmall.png)</center>
+  <center>{% qnimg 同余/bigsmall.png %}</center>
 
 ## 除法原理一
  
-<center>![](chufa.png)</center>
+<center>{% qnimg 同余/chufa.png %}</center>
 
 ## 除法原理二
 
-<center>![](yuanli.png)</center>
+<center>{% qnimg 同余/yuanli.png %}</center>
