不知道发生了啥，但再提交一次吧

--- a/source/_posts/态势感知.md
+++ b/source/_posts/态势感知.md
@@ -3,5 +3,23 @@ title: 态势感知
 copyright: true
 date: 2019-05-31 17:31:11
 categories:
+- 态势感知相关
+- 态势感知
 tags:
+- 态势感知
 ---
+
+在找研究方向时候，有人推荐我看看态势感知，所以记个笔记
+
+我对态势感知的理解就是：对网络里来往的流量进行分析，排除噪声，通过各种手段通过分析得出安全情况，然后进行防护。
+
+网络安全态势感知NSSA（network security situation awareness）
+<!--more-->
+
+# 态势感知
+
+ 态势是各种状态的综合，是一个整体和全局的概念。它强调的是系统和系统对象之间的关系,下图是态势感知的系统要素内容（我jio的就是单纯的流程，就是从收集到的原始数据，然后进行处理得到的数据，再从这些数据里面用技术去分析，得到相关不同的进行了的活动，再去针对不同的活动进行不同的分析，最后的状态评估，进行预测，不同的活动会对系统中的各个对象产生的作用）
+
+<center>{% qnimg 态势感知/struct.png%}</center>
+
+
