--- a/source/_posts/寻找两个有序数组的中位数.md
+++ b/source/_posts/寻找两个有序数组的中位数.md
@@ -43,7 +43,7 @@ tags:
 
 这个题目的本质就是，把这两个数组统一分成两部分，前面那个部分都要比后面的部分小，所以，我们必须确保：
 
-B[j−1]≤A[i] 以及 \text{A}[i-1] \leq \text{B}[j]A[i−1]≤B[j]
+B[j−1]≤A[i] 以及 $\text{A}[i-1] \leq \text{B}[j],A[i−1]≤B[j]$
 
 然后i和j的算法公式：
 
@@ -61,6 +61,8 @@ $ i=0∼m, j=\frac{m+n+1}{2}−i$
 
 讲的有点零散，所以我决定直接把代码连接放出来！
 [见官网](https://leetcode-cn.com/problems/median-of-two-sorted-arrays/solution/xun-zhao-liang-ge-you-xu-shu-zu-de-zhong-wei-shu-b/)
+
+[和我github上面的代码实现](https://github.com/aimasa/exercise_demo/tree/master/src/exercise/demo/findmediansortedarrays)
 
 # 题目来源
 
