--- a/source/_posts/同余.md
+++ b/source/_posts/同余.md
@@ -6,7 +6,9 @@ categories:
 - 离散对数
 - 同余
 tags:
-- 同余
+- 算法
+- 离散对数
+mathjax: true
 ---
 同余是数论中的一种等价关系。符号是≡，有两个正整数，一起除以一个相同的正整数，得出的余数一样的话，那么称这两个正整数同余。
 
@@ -29,7 +31,6 @@ m | (a-b): (a-b)是m的倍数
 ## 保持基本运算
 
 <center>{% qnimg 同余/gongshi.png %}</center>
-
 ## 传递性
 
     a ≡ b(mod m) 
@@ -37,13 +38,11 @@ m | (a-b): (a-b)是m的倍数
     =>a ≡ d(mod m)  
 
 ## 放大缩小模数
-   
+
   <center>{% qnimg 同余/bigsmall.png %}</center>
-
 ## 除法原理一
- 
-<center>{% qnimg 同余/chufa.png %}</center>
 
+<center>{% qnimg 同余/chufa.png %}</center>
 ## 除法原理二
 
 <center>{% qnimg 同余/yuanli.png %}</center>
