--- a/source/_posts/基于对数.md
+++ b/source/_posts/基于对数.md
@@ -7,6 +7,7 @@ categories:
 - 基于对数乘除法
 tags:
 - 基于对数乘除法
+mathjax: true
 ---
 
 它是在伽罗瓦域中将2的幂次方计算出来并存在相应的表中，随时查找到2的不同的幂次方对应的不同的值，然后让乘法除法更加简单快捷。所以这个不属于位运算，只是一个算法的代码示例，以后等更了解一点这些了，再好好细分，现在就这样吧
@@ -23,7 +24,7 @@ tags:
 
     gf_exp = [0] * 512 # Create list of 512 elements. In Python 2.6+, consider using bytearray
     gf_log = [0] * 256
-
+    
     def init_tables(prim=0x11d):
     '''Precompute the logarithm and anti-log tables for faster computation later, using the provided primitive polynomial.'''
         # prim is the primitive (binary) polynomial. Since it's a polynomial in the binary sense,
@@ -37,13 +38,13 @@ tags:
             gf_exp[i] = x # compute anti-log for this value and store it in a table
             gf_log[x] = i # compute log at the same time
             x = gf_mult_noLUT(x, 2, prim)
-
+    
         # If you use only generator==2 or a power of 2, you can use the following which is faster than gf_mult_noLUT():
         #x <<= 1 # multiply by 2 (change 1 by another number y to multiply by a power of 2^y)
         #if x & 0x100: #类似于x> = 256，但速度要快得多
             #(because 0x100 == 256)
             #x ^= prim # substract the primary polynomial to the current value (instead of 255, so that we get a unique set made of coprime numbers), this is the core of the tables generation
-
+    
         #优化：反日志表的大小加倍，这样我们就不需要修改255来保持在边界内
         #（因为我们主要使用这个表来增加两个GF数，不再增加）。
         for i in range(255, 512):
