--- a/source/_posts/多项式.md
+++ b/source/_posts/多项式.md
@@ -7,6 +7,7 @@ categories:
 - 多项式的加法和乘法
 tags:
 - 多项式的加法和乘法
+mathjax: true
 ---
 
 其实这个不是位运算，只是把作为多项式的加法和乘法代码示例来进行解释，这是在伽罗瓦域中的加法和乘法，所以其中的加法和乘法均为异或算法。
