--- a/source/_posts/寻找两个有序数组的中位数.md
+++ b/source/_posts/寻找两个有序数组的中位数.md
@@ -7,6 +7,7 @@ categories:
 - 寻找两个有序数组的中位数
 tags:
 - 算法
+mathjax: true
 ---
 
 给定两个大小为 m 和 n 的有序数组 nums1 和 nums2。
@@ -33,7 +34,6 @@ tags:
 把nums1和nums2都分成两个部分，然后nums1左边的部分和nums2左边的部分，nums1右边的部分nums2右边的部分放在一块，最后左边的部分总数要和右边部分的总数一样多,如下图：
 
 <center>{% qnimg 寻找两个有序数组的中位数/part.png%}</center>
-
 根据这张图里面的左边和右边的部分，我们假设已知$\,i\,$和$\,m\,$还有$\,n\,$的值，然后用公式把$\,j\,$表示出来,其中：
 
 - $len(left_part)=len(right_part)$
