--- a/source/_posts/机器学习之线性回归.md
+++ b/source/_posts/机器学习之线性回归.md
@@ -9,6 +9,7 @@ categories:
 tags:
 - 机器学习
 - 算法
+mathjax: true
 ---
 
 在机器学习中，我听了吴恩达老师的几节课，一节是来介绍机器学习里面的监督学习，监督学习里面以回归分析和分类为代表，然后吴恩达老师介绍了回归算法，在此做笔记。
@@ -58,7 +59,6 @@ tags:
 这里是别人对绝对值的导数可能不存在而写出的证明：
 
 <center>{%qnimg 机器学习之线性回归/proof.png%}</center>
-
 ## 最小二乘法
 
 `最小二乘法`是一种数学优化技术，就是可以求到一些未知的数据，并且使这些求得的数据和实际数据间的误差的平方和为最小
