--- a/source/_posts/电话号码的字母组合.md
+++ b/source/_posts/电话号码的字母组合.md
@@ -7,6 +7,8 @@ categories:
 - 电话号码的字母组合
 tags:
 - 算法
+- leedcode算法题
+mathjax: true
 ---
 
 给定一个仅包含数字 `2-9` 的字符串，返回所有它能表示的字母组合。
@@ -14,7 +16,6 @@ tags:
 给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
 
 <center>{%qnimg 电话号码的字母组合/problem.png%}</center>
-
 
 
 [题目来源](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/)
@@ -44,7 +45,6 @@ tags:
 ## 分析逻辑
 
 <center>{%qnimg 电话号码的字母组合/tree.png%}</center>
-
 假设输入的数字是“23“，然后”2“分支出去”abc“，三个支，再由”abc“分支，每个支都会连接到3里面的每个分支。
 
 这就是可以被提取出来的重复逻辑。
@@ -58,7 +58,6 @@ tags:
 流程就变成了这样：
 
 <center>{%qnimg 电话号码的字母组合/info.png%}</center>
-
 【注：里面有错别字：是==第一个循环==】
 
 这样就能把这个分支用递归的办法全部遍历一遍了。
