--- a/source/_posts/二分排序法.md
+++ b/source/_posts/二分排序法.md
@@ -7,6 +7,7 @@ categories:
 - 二分排序法
 tags:
 - 算法
+mathjax: true
 ---
 
 这是很久前写的一篇博文，现在转移了地址，就一起把这篇博文转过来。
@@ -39,7 +40,7 @@ tags:
                 a[left] = tmp;
             }
         }
- 
+     
     }
     public class test {
     
@@ -51,7 +52,7 @@ tags:
             System.out.println(a[i]);}
         }
     }
- 
+
 
  就是先从低位开始排序，从i=1开始大循环，从已经排好序的left和right中折中取中间数，然后再和还未排序的数字进行比较大小，如果是大于中间数的话那么更改left指向位置（指向中间数后一个数据），依次循环，如果right小于left的话终止比较（这样就不会忘记把right指向的数据和需要排序的数据进行比较）。接着就插入，像插入排序那样进行数据交换，把这个未排序的数字插入该插入的地方。
 
