--- a/source/_posts/原根.md
+++ b/source/_posts/原根.md
@@ -7,6 +7,7 @@ categories:
 - 原根
 tags:
 - 原根
+mathjax: true
 ---
 
 其中，如果正整数$(a,m)=1$和正整数$\,d\; \left ( d\leqslant m\, -\, 1 \right )$满足$a^{d}\,\equiv\ 1(mod\ m)$那么满足这个式子的正整数$\,d\,$最小正整数$\,x\,$，$\,x\,=\,Ord_{m}\left ( a \right )$。如果$\,x\,=\,\Phi \left ( m \right )$那么就说这个$\,a\,$是$\,m\,$的原根
@@ -15,7 +16,6 @@ tags:
 [参考定理](https://zh.wikipedia.org/wiki/%E5%8E%9F%E6%A0%B9)
 
 <center>{% qnimg 原根/yuangen.png %}</center>
-
 就是在值最小的时候满足欧拉定理的式子，同时还要和欧拉函数的值一样,才能称作式子中这两个互质的数，一个是模另一个原根。
 
 所以，对于任意数m可以有很多个原根，也可以一个原根也没有（其中a是可变的）
@@ -25,4 +25,3 @@ tags:
 原根性质：
 
 <center>{% qnimg 原根/xinzhi.png %}</center>
-
