--- a/source/_posts/整数反转.md
+++ b/source/_posts/整数反转.md
@@ -7,6 +7,7 @@ categories:
 - 整数反转
 tags:
 - 算法
+mathjax: true
 ---
 
 给出一个 32 位的有符号整数，你需要将这个整数中每位上的数字进行反转。
@@ -15,7 +16,7 @@ tags:
 
     输入: 123
     输出: 321
- 
+
 示例 2:
 
     输入: -123
